<resources>
    <string name="app_name">NPCMancer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="facebook_application_id" translatable="false">624058009208264</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb624058009208264</string>
</resources>


    <!-- String resources for character sheet -->
    <string name="edit_character_label">Edit Character</string>
    <string name="name_label">Name:</string>
    <string name="race_label">Race:</string>
    <string name="gender_label">Gender:</string>
    <string name="statblock_label">Statblock:</string>
    <string name="alignment_label">Alignment:</string>
    <string name="ac_label">AC</string>
    <string name="hp_label">HP</string>
    <string name="speed_label">Speed</string>
    <string name="str_label">Str</string>
    <string name="dex_label">Dex</string>
    <string name="con_label">Con</string>
    <string name="int_label">Int</string>
    <string name="wis_label">Wis</string>
    <string name="cha_label">Cha</string>

    <string name="initial_name_text">John</string>

    <string name="button_label_race">Human</string>
    <string name="button_label_gender">Male</string>
    <string name="button_label_statblock">Noble</string>
    <string name="button_label_alignment">Lawful Neutral</string>
    <string name="button_label_customize">Customize Further</string>
    <string name="button_label_randomize">Randomize Stats</string>
    <string name="button_label_save">Save Changes</string>
    <string name="button_label_cancel">Cancel</string>

    <!-- String resources for generate NPC-->
    <string name="generate_npc_label">Generate NPC</string>

    <string name="Dragonborn_label">Dragonborn</string>
    <string name="Dwarf_label">Dwarf</string>
    <string name="Elf_label">Elf</string>
    <string name="Gnome_label">Gnome</string>
    <string name="HalfElf_label">Half Elf</string>
    <string name="Halfling_label">Halfling</string>
    <string name="HalfOrc_label">Half Orc</string>
    <string name="Human_label">Human</string>
    <string name="Tiefling_label">Tiefling</string>

    <string name="button_label_male">Male</string>
    <string name="button_label_female">Female</string>
    <string name="button_label_nonGendered">Non Gendered</string>

    <string name="button_label_acolyte">Acolyte</string>
    <string name="button_label_archmage">Archmage</string>
    <string name="button_label_assassin">Assassin</string>
    <string name="button_label_bandit">Bandit</string>
    <string name="button_label_banditCaptain">Bandit Captain</string>
    <string name="button_label_berserker">Berserker</string>
    <string name="button_label_commoner">Commoner</string>
    <string name="button_label_cultist">Cultist</string>
    <string name="button_label_cultFanatic">Cult Fanatic</string>
    <string name="button_label_druid">Druid</string>
    <string name="button_label_gladiator">Gladiator</string>
    <string name="button_label_guard">Guard</string>
    <string name="button_label_knight">Knight</string>
    <string name="button_label_mage">Mage</string>
    <string name="button_label_noble">Noble</string>
    <string name="button_label_priest">Priest</string>

    <string name="button_label_next">Next</string>
    <string name="button_label_back">Back</string>
    <string name="button_label_reRoll_names">Reroll Names</string>
    <string name="button_label_name_selection">Back To Name Selection</string>
    <string name="button_label_race_selection">Back To Race Selection</string>
    <string name="button_label_stat_selection">Back To Statblock Selection</string>



</resources>

