<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateNPC3"
    android:background="@drawable/npcm_background"
    >

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/generate_npc_label"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="true" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/name_label"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/race_label"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/gender_label"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/statblock_label"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8CA9C"
        android:onClick="toGenerateNPC2"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_back"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"

        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commonerNPC3" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_cancel"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/acolyteNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_acolyte"
        android:textColor="#320709"
        android:textSize="28sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toStartOf="@+id/archmageNPC3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/assassinNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_assassin"
        android:textColor="#320709"
        android:textSize="28sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toStartOf="@+id/banditNPC3"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acolyteNPC3"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/archmageNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E8CA9C"
        android:onClick="chooseStatblockButton"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_archmage"
        android:textColor="#320709"
        android:textSize="24sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/acolyteNPC3"

        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/banditNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_bandit"
        android:textColor="#320709"
        android:textSize="28sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/assassinNPC3"
        app:layout_constraintTop_toBottomOf="@+id/archmageNPC3"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/banditCaptainNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_banditCaptain"
        android:textColor="#320709"
        android:textSize="28sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toStartOf="@+id/berserkerNPC3"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assassinNPC3"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/berserkerNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_berserker"
        android:textColor="#320709"
        android:textSize="20sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/banditCaptainNPC3"
        app:layout_constraintTop_toBottomOf="@+id/banditNPC3"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/commonerNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_commoner"
        android:textColor="#320709"
        android:textSize="20sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toStartOf="@+id/cultistNPC3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banditCaptainNPC3"

        android:onClick="chooseStatblockButton"
        />

    <Button
        android:id="@+id/cultistNPC3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/button_label_cultist"
        android:textColor="#320709"
        android:textSize="28sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commonerNPC3"
        app:layout_constraintTop_toBottomOf="@+id/berserkerNPC3"

        android:onClick="chooseStatblockButton"
        />

    <TextView
        android:id="@+id/nameTextViewNPC3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="(Name)"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/raceTextViewNPC3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="(Race)"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewNPC3" />

    <TextView
        android:id="@+id/genderTextViewNPC3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="(Gender)"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/raceTextViewNPC3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#E8CA9C"
        android:shadowColor="#CFA030"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"

        android:text="@string/button_label_next"
        android:textColor="#320709"
        android:textSize="32sp"
        app:fontFamily="@font/mrseav9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/cultistNPC3" />

</androidx.constraintlayout.widget.ConstraintLayout>